--- a/AngularClient/src/app/user/edit-profile/edit-profile.component.html
+++ b/AngularClient/src/app/user/edit-profile/edit-profile.component.html
@@ -31,10 +31,6 @@
             </form>
             <form [formGroup]="service.userProfile" autocomplete="off"><br>
                 <div class="form-group">
-                    <label>Hobby</label>
-                    <input class="form-control" formControlName="Hobby" type="text" [value]="userDetails?.hobby">
-                </div><br>
-                <div class="form-group">
                     <label>City</label>
                     <input class="form-control" formControlName="City" type="text" [value]="userDetails?.city">
                 </div><br>
@@ -46,6 +42,13 @@
                     <label>About</label>
                     <input class="form-control" formControlName="About" type="text" [value]="userDetails?.about">
                 </div><br>
+                <div class="form-group">
+                    <label>Selected interests:</label>
+                    <div class="selected-interests">
+                        <span *ngFor="let interest of selectedInterests" (click)="deleteUserInterests(interest?.id)">{{interest?.name}}</span>
+                    </div><br>
+                    <button type="submit" class="interest-btn" (click)="openModal()">Add interests</button>
+                </div>
             </form>
             <div class="form-row  text-center">
                 <div class="form-group col-md-8 offset-md-2">
@@ -55,4 +58,20 @@
 
         </div>
     </div>
+
 </section>
+
+<ng-template [ngIf]="showModal">
+    <div class="modal-interest">
+        <div class="modal-content">
+            <span class="close-btn" (click)="closeModal()">&times;</span>
+            <h2>Choose interest</h2>
+            <ul class="interest-list">
+                <li *ngFor="let interest of allInterests">
+                    <input type="checkbox" class="interest-checkbox" name="interest" [value]="interest?.id" [checked]="isInterestSelected(interest)" (change)="toggleInterest($event, interest?.id)">
+                    <label>{{ interest?.name }}</label>
+                </li>
+            </ul>
+        </div>
+    </div>
+</ng-template>
